# opencomputer

./: .gitignore  self-evolution-comparison.md  self-evolution-gaps-deep-dive.md
OpenComputer/: .dockerignore  .gitignore  .venv  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
OpenComputer/audit/: 05-skills-tools-plugins.md  06-privacy.md  A-CONTRACT.md  B-CONTRACT.md  C-CONTRACT.md
OpenComputer/docs/: 2026-05-11-pi-derived-ux-bundle.md  ARCHITECTURE.md  MEMORY-DB-ONBOARDING.md  SECURITY-INVARIANTS.md  THREAT-MODEL.md  acp.md  channels-ownership.md  coding-harness-audit.md  context-window-deep-dive.md  databases.md  local-models.md  loop-detection.md  mcp-catalog.md  mcp-server-approvals.md  memory-architecture.md  memory_dreaming.md  openclaw-parity-2026-05-10.md  parallel-sessions.md  plugin-authors.md  plugin-bundle-mcp.md  sandbox-and-scope.md  sdk-reference.md  security-production.md
OpenComputer/docs/awareness/: README.md  cli.md  life-events.md  reranker.md
OpenComputer/docs/browser-port/: BLUEPRINT.md  BRIEF-01-chrome-and-profiles.md  BRIEF-02-cdp-and-session.md  BRIEF-03-pw-tools-core.md  BRIEF-04-ai-and-snapshot.md  BRIEF-05-server-and-auth.md  BRIEF-06-client-and-utils.md  BRIEF-utils.md  IMPLEMENTATION_STATUS.md
OpenComputer/docs/cli/: checkpoints.md  files.md  worktrees.md
OpenComputer/docs/deployment/: raspberry-pi.md  systemd.md
OpenComputer/docs/evolution/: README.md  design.md  source-map.md
OpenComputer/docs/f6/: README.md  design.md  opencli-source-map.md
OpenComputer/docs/f7/: README.md  design.md  interweaving-plan.md  oi-source-map.md
OpenComputer/docs/gateway/: deferred-parity-work.md  intelligence-parity.md
OpenComputer/docs/integrations/: codeburn-open-pr.sh  codeburn-opencomputer.ts  codeburn-upstream-pr.md  microsoft-graph.md  profile-swap-event-consumers.md  voice.md
OpenComputer/docs/plans/: README.md  mcp-openclaw-port.md  openhub-mvp.md  profile-handoff-investigation.md  social-traces-plugin.md  tryopencomputer-platform-build-2026-05-18.md
OpenComputer/docs/providers/: anthropic-skills-via-api.md  pdf-support.md
OpenComputer/docs/refs/: 2026-05-17-best-of-three-audit.md  2026-05-17-best-of-three-port-plan.md  2026-05-17-coding-harness-and-orchestration-gaps.md  2026-05-17-gateway-perf-todo-closed.md  2026-05-18-gateway-cli-parity-backlog.md  2026-05-18-quarantine-computer-use-collision-test.md  2026-05-18-remaining-work-plan.md  evals.md  hermes-context-personality-skins-v2-parity.md  hermes-tui-protocol-vs-oc-wire.md  oc-sandbox-baseline.md  oc-skill-frontmatter-baseline.md  oc-user-model-baseline.md  oc-user-model-writers.md  phase-11-commit-list.md
OpenComputer/docs/runbooks/: always-on-daemon.md  outcome-aware-learning.md
OpenComputer/docs/sandbox/: daytona.md  e2b.md  modal.md
OpenComputer/docs/skills/: 2026-05-02-bundled-corpus-audit.md  AUTHORING.md
OpenComputer/evals/baselines/: instruction_detector.json  job_change.json
OpenComputer/evals/cases/: instruction_detector.jsonl  (+3 more)
OpenComputer/oc-workspace/: docker-compose.dev.yml  tsconfig.json
OpenComputer/opencomputer/: __init__.py  __main__.py  _early_init.py  batch.py  checkpoint_admin.py  cli.py  cli_activate.py  cli_adapter.py  cli_ambient.py  cli_audit.py  cli_auth.py  cli_awareness.py  cli_backup.py  cli_banner.py  cli_banner_art.py  cli_bindings.py  cli_browser.py  cli_channels.py  cli_checkpoints.py  cli_consent.py  cli_context.py  cli_cost.py  cli_cron.py  cli_dashboard.py  cli_error_display.py  cli_eval.py  cli_evolution.py  cli_favorites.py  cli_files.py  cli_gateway.py  cli_gateway_status.py  cli_goal.py  cli_heartbeat.py  cli_help.py  cli_hints.py  cli_honcho.py  cli_hooks.py  cli_host.py  cli_inference.py  cli_insights.py  (+53 more)
OpenComputer/plugin_sdk/: CLAUDE.md  __init__.py  channel_accounts.py  channel_contract.py  channel_helpers.py  channel_utils.py  classifier.py  consent.py  core.py  decay.py  doctor.py  embeddings.py  file_lock.py  hooks.py  host_profile.py  inference.py  ingestion.py  injection.py  interaction.py  memory.py  network_utils.py  pdf_helpers.py  permission_mode.py  profile_context.py  profile_subprocess.py  provider_contract.py  queue.py  realtime_voice.py  runtime_context.py  sandbox.py  skill_source.py  slash_command.py  sticker_cache.py  tool_contract.py  tool_matcher.py  trace.py  traces.py  transports.py  user_model.py  wire_primitives.py  (+1 more)
OpenComputer/scripts/: bootstrap_worktree.sh  build-dashboard.sh  build-tui.sh  cleanup_agent_chrome.sh  demo_social_traces.sh  demo_social_traces_stubbed.py  install.sh  refresh_extension_boundary_inventory.py  setup_open_webui.sh  smoke_browser_port_v0_5_bug_a.py  verify_cache_live.py
OpenComputer/tests/: conftest.py  sandbox_conformance.py  test_accept_edits_hook.py  test_acp_agent_json_autobundle.py  test_acp_cli.py  test_acp_cli_manifest.py  test_acp_events.py  test_acp_outbound_request_permission.py  test_acp_permissions.py  test_acp_server.py  test_acp_session.py  test_acp_toolset.py  test_activation_planner.py  test_activation_source.py  test_activation_wiring.py  test_adapter_runner_decorator.py  test_adapter_runner_discovery.py  test_adapter_runner_plugin.py  test_adapter_runner_runner.py  test_adapter_runner_scaffold.py  test_adapter_runner_site_memory.py  test_adapter_runner_validation.py  test_adapter_scaffolder.py  test_affect_injection.py  test_affirmation_lexicon.py  test_agent_hook_v1_1.py  test_agent_loop_factory.py  test_agent_loop_goal.py  test_agent_router.py  test_agent_templates.py  test_agents_slash.py  test_ambient_capability_claim.py  test_ambient_cli.py  test_ambient_daemon_dedup.py  test_ambient_doctor_checks.py  test_ambient_foreground_detector.py  test_ambient_foreground_event.py  test_ambient_no_cloud_egress.py  test_ambient_pause_state.py  test_ambient_sensitive_filter.py  (+1347 more)
OpenComputer/ui-tui/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
OpenComputer/ui-web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+2461 files in other folders)
