[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencomputer"
version = "0.2.0"
description = "Personal AI agent framework — plugin-first, self-improving, multi-channel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenComputer Contributors" },
]
keywords = ["ai", "agent", "llm", "claude", "anthropic", "openai", "chatbot"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "anthropic>=0.40",
  "openai>=1.60",
  "pydantic>=2.9",
  "jinja2>=3.1",
  "aiosqlite>=0.20",
  "websockets>=13.0",
  "python-frontmatter>=1.1",
  "rich>=13.7",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=9.0",
  "pyyaml>=6.0",
  "mcp>=1.0",
  "discord.py>=2.3",
  "beautifulsoup4>=4.12",
  "keyring>=24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "black>=24.0",
  "mypy>=1.11",
]
# Optional: self-hosted Honcho memory provider (Phase 10f.K–N). Install with
#   pip install opencomputer[honcho]
# plus Docker on the user's machine. See extensions/memory-honcho/README.md.
honcho = [
  "httpx>=0.27",
]
# Optional: macOS menu-bar indicator for the 3.F system-control mode.
# Install with `pip install opencomputer[menubar]` on macOS only; on Linux
# / Windows the marker simply skips the wheel.
menubar = [
  "rumps>=0.4.0; platform_system == 'Darwin'",
]

[project.scripts]
opencomputer = "opencomputer.cli:main"
oc = "opencomputer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opencomputer", "plugin_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
  "E501",    # line too long — we use 100 chars, line length handled by formatter
  "SIM105",  # prefer contextlib.suppress — stylistic; try/except/pass is clearer in some cases
  "SIM117",  # combine nested `with` — readability preference, not a bug
  "B904",    # raise ... from err — often more noise than signal in simple re-raises
  "B007",    # unused loop control variable — fine when iteration is the point
  "B008",    # function call in default argument — common in Typer and pydantic
  "N806",    # variable in function should be lowercase — conflicts with Message dataclass fields
  "UP042",   # str + Enum is fine; StrEnum changes serialization semantics we depend on
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401", "B017", "N801"]  # tests may have unused imports, broad assertions, helper classes

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
