[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencomputer"
version = "2026.4.27"
description = "Personal AI agent framework — plugin-first, self-improving, multi-channel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenComputer Contributors" },
]
keywords = ["ai", "agent", "llm", "claude", "anthropic", "openai", "chatbot"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "anthropic>=0.40",
  "openai>=1.60",
  "pydantic>=2.9",
  "jinja2>=3.1",
  "aiosqlite>=0.20",
  "websockets>=13.0",
  "python-frontmatter>=1.1",
  "rich>=13.7",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=9.0",
  "pyyaml>=6.0",
  "mcp>=1.0",
  "discord.py>=2.3",
  "beautifulsoup4>=4.12",
  "keyring>=24",
  "croniter>=2.0",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]
# Optional: Layer 3 deepening pipeline (BGE embeddings + Chroma vector
# store + psutil resource probes). Install with
#   pip install opencomputer[deepening]
# Heavy weights download on first BGE load. See profile_bootstrap/.
deepening = [
  "psutil>=5.9",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "black>=24.0",
  "mypy>=1.11",
]
# Optional: self-hosted Honcho memory provider (Phase 10f.K–N). Install with
#   pip install opencomputer[honcho]
# plus Docker on the user's machine. See extensions/memory-honcho/README.md.
honcho = [
  "httpx>=0.27",
]
# Optional: macOS menu-bar indicator for the 3.F system-control mode.
# Install with `pip install opencomputer[menubar]` on macOS only; on Linux
# / Windows the marker simply skips the wheel.
menubar = [
  "rumps>=0.4.0; platform_system == 'Darwin'",
]
# Optional: native macOS GUI control (Phase 2.1 of catch-up plan).
# Enables PointAndClickTool's Quartz CGEvent path (faster + supports
# right-click). Without this extra, PointAndClick falls back to
# osascript which is left-click-only. macOS only — Linux/Windows skip
# the wheel via the platform marker.
gui = [
  "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
]

[project.scripts]
opencomputer = "opencomputer.cli:main"
oc = "opencomputer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opencomputer", "plugin_sdk"]

# Bundle the discoverable plugin tree into the wheel. ``extensions/`` is
# NOT a Python import root (no ``__init__.py``) — it's the runtime
# discovery target that ``opencomputer.plugins.discovery._bundled_
# extensions_root()`` computes as ``<wheel install root>/extensions``.
# Without this force-include, the wheel ships zero providers / channels
# and ``opencomputer chat`` errors with "Provider 'anthropic' is not
# available" on first use. Caught by the v2026.4.26 E2E install test.
[tool.hatch.build.targets.wheel.force-include]
"extensions" = "extensions"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
  "E501",    # line too long — we use 100 chars, line length handled by formatter
  "SIM105",  # prefer contextlib.suppress — stylistic; try/except/pass is clearer in some cases
  "SIM117",  # combine nested `with` — readability preference, not a bug
  "B904",    # raise ... from err — often more noise than signal in simple re-raises
  "B007",    # unused loop control variable — fine when iteration is the point
  "B008",    # function call in default argument — common in Typer and pydantic
  "N806",    # variable in function should be lowercase — conflicts with Message dataclass fields
  "UP042",   # str + Enum is fine; StrEnum changes serialization semantics we depend on
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401", "B017", "N801"]  # tests may have unused imports, broad assertions, helper classes
"extensions/aws-bedrock-provider/__init__.py" = ["N999"]  # hyphenated dir; Python module alias handles import name

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "benchmark: opt-in slow benchmark tests requiring a live LLM provider (run via `pytest -m benchmark`)",
]
