[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencomputer"
version = "2026.4.27"
description = "Personal AI agent framework — plugin-first, self-improving, multi-channel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenComputer Contributors" },
]
keywords = ["ai", "agent", "llm", "claude", "anthropic", "openai", "chatbot"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "anthropic>=0.40",
  "openai>=1.60",
  "pydantic>=2.9",
  "jinja2>=3.1",
  "aiosqlite>=0.20",
  "websockets>=13.0",
  "python-frontmatter>=1.1",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "typer>=0.12",
  "httpx>=0.27",
  "tenacity>=9.0",
  "pyyaml>=6.0",
  "mcp>=1.0",
  "discord.py>=2.3",
  "beautifulsoup4>=4.12",
  "keyring>=24",
  "croniter>=2.0",
  "aiohttp>=3.9",
  "psutil>=5.9",
  "mss>=9.0",
  "pyperclip>=1.8",
  "rapidocr-onnxruntime>=1.2.3",
  "filelock>=3.16",
  # Hermes-parity arrow-key picker for `oc model` and other interactive
  # selections (PR after #275). Falls back to curses then numbered list
  # when this package is absent — install is required only for the
  # nicest UX, not for correctness.
  "simple-term-menu>=1.0,<2",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]
# Optional: Layer 3 deepening pipeline (BGE embeddings + Chroma vector
# store + psutil resource probes). Install with
#   pip install opencomputer[deepening]
# Heavy weights download on first BGE load. See profile_bootstrap/.
deepening = [
  "psutil>=5.9",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "black>=24.0",
  "mypy>=1.11",
  # Voice-mode test deps (light enough for CI; the heavy local-Whisper
  # backends mlx-whisper / whisper-cpp stay in their own extras).
  "webrtcvad>=2.0",
  "sounddevice>=0.4",
  "soundfile>=0.12",
]
# Optional: self-hosted Honcho memory provider (Phase 10f.K–N). Install with
#   pip install opencomputer[honcho]
# plus Docker on the user's machine. See extensions/memory-honcho/README.md.
honcho = [
  "httpx>=0.27",
]
# Optional: macOS menu-bar indicator for the 3.F system-control mode.
# Install with `pip install opencomputer[menubar]` on macOS only; on Linux
# / Windows the marker simply skips the wheel.
menubar = [
  "rumps>=0.4.0; platform_system == 'Darwin'",
]
# Optional: GUI automation backend.
# - pyobjc-framework-Quartz: native macOS event injection for
#   PointAndClickTool (faster + supports right-click). macOS only via
#   platform marker; Linux/Windows skip the wheel.
# - pyautogui: cross-platform fallback for SystemClick / SystemKeystroke
#   / SystemNotify. Works the same on macOS / Linux / Windows. Without
#   this extra, those tools fall back to platform-native shell-outs
#   (osascript / xdotool / notify-send / PowerShell).
gui = [
  "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
  "pyautogui>=0.9.54",
]
# Optional: voice-mode (continuous push-to-talk audio + VAD gating).
# Install with `pip install opencomputer[voice]`. ``sounddevice`` provides
# cross-platform audio capture; ``webrtcvad`` filters non-speech frames
# before they reach the STT path. See extensions/voice-mode/.
voice = [
  "webrtcvad>=2.0",
  "sounddevice>=0.4",
  "soundfile>=0.12",
]
# Optional: cross-platform local STT via whisper.cpp (pywhispercpp). Heavy
# wheel; opt in with `pip install opencomputer[voice-local]`.
voice-local = [
  "pywhispercpp>=1.2",
]
# Optional: macOS Apple Silicon-optimized local STT via mlx-whisper.
# Install with `pip install opencomputer[voice-mlx]` on macOS only.
voice-mlx = [
  "mlx-whisper>=0.4; platform_system == 'Darwin'",
]
# Optional: cloud STT via Groq's Whisper-large-v3. ~10x faster + ~5x cheaper
# than OpenAI's whisper-1 for the same accuracy class — great for high-volume
# voice-message transcription. Free tier at https://console.groq.com.
# Install with `pip install opencomputer[stt-groq]`. See opencomputer/voice/groq_stt.py.
stt-groq = [
  "groq>=0.11",
]
# Optional: free Edge TTS (Microsoft Azure neural voices, no API key).
# Install with `pip install opencomputer[voice-edge]`. Tier 3 win — removes
# the API-key onboarding friction for voice output. See
# opencomputer/voice/edge_tts.py.
voice-edge = [
  "edge-tts>=6.1",
]
# Optional: browser-control plugin (Playwright-based automation + the
# OpenClaw browser port — see OpenComputer/docs/browser-port/BLUEPRINT.md).
# Install with `pip install opencomputer[browser]`, then:
#   playwright install chromium
# Sessions are isolated per-call by default. See extensions/browser-control/.
browser = [
  "playwright>=1.40",
  # Browser-port subsystems:
  "send2trash>=1.8",   # cross-platform trash for profile reset/delete (W0a)
  "websockets>=12",    # CDP WS handshake check (W0c lifecycle.is_chrome_cdp_ready)
  "fastapi>=0.110",    # HTTP control surface (W2b)
  "uvicorn>=0.27",     # ASGI runner for FastAPI (W2b)
]

[project.scripts]
opencomputer = "opencomputer.cli:main"
oc = "opencomputer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opencomputer", "plugin_sdk"]

# Bundle the discoverable plugin tree into the wheel. ``extensions/`` is
# NOT a Python import root (no ``__init__.py``) — it's the runtime
# discovery target that ``opencomputer.plugins.discovery._bundled_
# extensions_root()`` computes as ``<wheel install root>/extensions``.
# Without this force-include, the wheel ships zero providers / channels
# and ``opencomputer chat`` errors with "Provider 'anthropic' is not
# available" on first use. Caught by the v2026.4.26 E2E install test.
[tool.hatch.build.targets.wheel.force-include]
"extensions" = "extensions"
# systemd unit template — shipped alongside opencomputer.service so
# `opencomputer service install` can read it from the installed wheel.
"opencomputer/service/templates/opencomputer.service" = "opencomputer/service/templates/opencomputer.service"

[tool.ruff]
line-length = 100
target-version = "py312"
# Skill bundles ship third-party helper scripts (Hermes-imported skills,
# user-authored scripts) that follow upstream code style. They're not
# part of OC's surface area — exclude from lint.
extend-exclude = [
  "opencomputer/skills/*/scripts/",
  "opencomputer/skills/*/templates/",
  "opencomputer/skills/*/references/",
  "extensions/*/skills/*/scripts/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
  "E501",    # line too long — we use 100 chars, line length handled by formatter
  "SIM102",  # combine nested `if` — same readability rationale as SIM117; nested guards often clearer
  "SIM105",  # prefer contextlib.suppress — stylistic; try/except/pass is clearer in some cases
  "SIM117",  # combine nested `with` — readability preference, not a bug
  "B904",    # raise ... from err — often more noise than signal in simple re-raises
  "B007",    # unused loop control variable — fine when iteration is the point
  "B008",    # function call in default argument — common in Typer and pydantic
  "N806",    # variable in function should be lowercase — conflicts with Message dataclass fields
  "UP042",   # str + Enum is fine; StrEnum changes serialization semantics we depend on
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401", "B017", "N801"]  # tests may have unused imports, broad assertions, helper classes
"extensions/aws-bedrock-provider/__init__.py" = ["N999"]  # hyphenated dir; Python module alias handles import name
"extensions/codex-provider/__init__.py" = ["N999"]  # hyphenated dir

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "benchmark: opt-in slow benchmark tests requiring a live LLM provider (run via `pytest -m benchmark`)",
]
